Btn | Fix icon alignment issues

--- a/src/scss/components/button/_base.scss
+++ b/src/scss/components/button/_base.scss
@@ -28,7 +28,11 @@
   .Icon {
     display: inline-block;
     line-height: $base-lh;
-    vertical-align: top;
+    vertical-align: middle;
+  }
+
+  .Icon--s {
+    line-height: $lh--s;
   }
 
   + .Btn:not(.Btn--block) {
